...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/open_lessons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lessons"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="406dp" />

...
